Fixed footer style to match navbar design,sized up and  added hover styles to social media links. Navbar increased heading size, made right side readable and made booking button instead of link. Fixed tabulation in code.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,17 @@
 
+/*------General rules*/
 
 body{
      background-image: linear-gradient(#af9483,#f0ede5 );
 }
+
+/*------hover effects */
+
+.hvr-sweep-to-top::before{
+    background: #af9483;
+}
+
+
 
 
 /*------To stop the overflow 8 */
@@ -21,6 +30,39 @@ body{
         color: #fafafa;
      }
 .navbar-toggler{
-         color: #000;
-        
+         color: #000;       
      }
+
+#hiddenMenuItem p{
+    color: #fafafa;
+}
+
+/*--------------------------Footer */
+
+footer{
+         background-color:#615550;
+      }
+
+footer h4{
+    color: #fafafa;
+    letter-spacing: 2px;
+}
+
+.social-links{
+    margin-top: 20px;
+}
+
+.social-links li a i {
+    height: 50px;
+    width: 50px;
+    color: #615550;
+    background-color: #af9483;
+    font-size: 30px;
+    padding: 10px;
+    border-radius: 50%;
+}
+
+.social-links li a i:hover{
+    background-color: #615550;
+    color: #fafafa;
+}
